infrastructure/k8s/vehicule-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicule-service
  namespace: fleet-management
spec:
  selector:
    app: vehicule-service
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: ClusterIP
